@@ -1,3 +1,8 @@
+2009-01-09  John F. Carr  <jfc@mit.edu>
+
+	PR c++/37877
+	* g++.dg/parse/linkage3.C: New test.
+
 2009-01-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/38771
